# Velocity2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
.data/: velocity.db
Requirement/: velocity_project_vision_v2_cn.md
Requirement/UIDesign/: Velocity OS.html  app.css  data.jsx  pages-admin.jsx  pages-core.jsx  pages-strategy.jsx  primitives.jsx  shell.jsx  tokens.css
apps/api/: CLAUDE.md  DESIGN.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/tests/: conftest.py  test_auth.py  test_automation.py  test_catalog.py  test_chat.py  test_chat_stream.py  test_debate.py  test_decisions.py  test_health.py  test_inbox.py  test_knowledge.py  test_knowledge_sources.py  test_llm_usage.py  test_objectives.py  test_projects.py  test_route.py  test_strategy.py  test_strategy_outputs.py
apps/api/velocity_api/: __init__.py  app.py  audit.py  auth.py  db.py  models.py  schemas.py  seed_data.py  settings.py  telemetry.py
apps/api/velocity_api/routes/: __init__.py  automation.py  catalog.py  chat.py  debate.py  decisions.py  inbox.py  knowledge.py  knowledge_sources.py  llm_usage.py  objectives.py  projects.py  route.py
docs/: 01_VISION_AND_CAPABILITIES.md  README.md  velocity_prd_v2_cn.md  velocity_project_vision_v2_cn.md
docs/handoff/: 01_产品愿景.md  02_产品需求.md  03_技术架构.md  04_知识管理.md  05_智能体工作流.md  06_用户指南.md  07_新成员交接.md  08_待办路线图.md  09_会话回顾与下一阶段计划.md  10_迭代进度_UI完整化.md  README.md
src/: App.jsx
src/lib/: api.js
(+24 files in other folders)
